; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_snappy.c_snappy_copy1.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_snappy.c_snappy_copy1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*, i32, i32)* @snappy_copy1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @snappy_copy1(i32* %0, i32* %1, i32* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %13 = load i32, i32* %10, align 4
  %14 = and i32 %13, 7
  %15 = add nsw i32 4, %14
  store i32 %15, i32* %11, align 4
  %16 = load i32*, i32** %6, align 8
  %17 = call i32 @bytestream2_get_byte(i32* %16)
  %18 = load i32, i32* %10, align 4
  %19 = and i32 %18, 56
  %20 = shl i32 %19, 5
  %21 = or i32 %17, %20
  store i32 %21, i32* %12, align 4
  %22 = load i32*, i32** %7, align 8
  %23 = load i32*, i32** %8, align 8
  %24 = load i32, i32* %9, align 4
  %25 = load i32, i32* %12, align 4
  %26 = load i32, i32* %11, align 4
  %27 = call i32 @snappy_copy(i32* %22, i32* %23, i32 %24, i32 %25, i32 %26)
  ret i32 %27
}

declare dso_local i32 @bytestream2_get_byte(i32*) #1

declare dso_local i32 @snappy_copy(i32*, i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
